{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1104,
  "lineage": "9f6dfb49-e007-dc74-70eb-2e280a6c2271",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:internet-gateway/igw-0338545999077c6eb",
            "id": "igw-0338545999077c6eb",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-igw"
            },
            "tags_all": {
              "Name": "ecs-test-igw"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_test_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:loadbalancer/app/ecs-test-my-app-alb/204879ecd71f520a",
            "arn_suffix": "app/ecs-test-my-app-alb/204879ecd71f520a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-test-my-app-alb-918273650.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:loadbalancer/app/ecs-test-my-app-alb/204879ecd71f520a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-test-my-app-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0da417904fef6bbef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ece89a687e52855"
              },
              {
                "subnet_id": "subnet-08738ac0548eb3ecb"
              }
            ],
            "subnets": [
              "subnet-06ece89a687e52855",
              "subnet-08738ac0548eb3ecb"
            ],
            "vpc_id": "vpc-0130dcdd5102240fd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_subnet.ecs_test_public_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:listener/app/ecs-test-my-app-alb/204879ecd71f520a/d6e9a4f6f39ffd1d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:targetgroup/ecs-test-my-app-tg/dedc5aa90863b357",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:listener/app/ecs-test-my-app-alb/204879ecd71f520a/d6e9a4f6f39ffd1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:loadbalancer/app/ecs-test-my-app-alb/204879ecd71f520a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_lb.ecs_test_app_alb",
            "module.aws_vpc.aws_lb_target_group.ecs_test_target_group",
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_subnet.ecs_test_public_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_test_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:targetgroup/ecs-test-my-app-tg/dedc5aa90863b357",
            "arn_suffix": "targetgroup/ecs-test-my-app-tg/dedc5aa90863b357",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:864899853618:targetgroup/ecs-test-my-app-tg/dedc5aa90863b357",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-test-my-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0338545999077c6eb",
            "id": "r-rtb-03428fdc6402011dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03428fdc6402011dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.ecs_test_igw",
            "module.aws_vpc.aws_route_table.ecs_test_public",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_test_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:route-table/rtb-0c98300d3a48b0d65",
            "id": "rtb-0c98300d3a48b0d65",
            "owner_id": "864899853618",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "ecs-test-private-rt"
            },
            "tags_all": {
              "Name": "ecs-test-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:route-table/rtb-03428fdc6402011dd",
            "id": "rtb-03428fdc6402011dd",
            "owner_id": "864899853618",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "ecs-test-public-rt"
            },
            "tags_all": {
              "Name": "ecs-test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_test_private_app_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1cddbdfbb5f1ccf",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c98300d3a48b0d65",
            "subnet_id": "subnet-04e0ae38b6a59ea54"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_private",
            "module.aws_vpc.aws_subnet.ecs_test_private_app_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f15c1a67e8173c",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c98300d3a48b0d65",
            "subnet_id": "subnet-05dacaa3220809d0b"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_private",
            "module.aws_vpc.aws_subnet.ecs_test_private_app_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_test_private_db_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b8d645440acae07",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c98300d3a48b0d65",
            "subnet_id": "subnet-0c8e4e7b7917e3103"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_private",
            "module.aws_vpc.aws_subnet.ecs_test_private_db_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf53c1f368a57da",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c98300d3a48b0d65",
            "subnet_id": "subnet-045dd9b82abb5398c"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_private",
            "module.aws_vpc.aws_subnet.ecs_test_private_db_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_test_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017cbd286eeba1103",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03428fdc6402011dd",
            "subnet_id": "subnet-06ece89a687e52855"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_public",
            "module.aws_vpc.aws_subnet.ecs_test_public_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0668bf98e9d67a5fe",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03428fdc6402011dd",
            "subnet_id": "subnet-08738ac0548eb3ecb"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_public",
            "module.aws_vpc.aws_subnet.ecs_test_public_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_test_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:security-group/sg-00e9de63d787cc86e",
            "description": "Security group for ECS app servers",
            "egress": [],
            "id": "sg-00e9de63d787cc86e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da417904fef6bbef"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da417904fef6bbef"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-test-app-sg",
            "name_prefix": "",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_test_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:security-group/sg-0c1d14df2de0ba18a",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-0c1d14df2de0ba18a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e9de63d787cc86e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecs-test-db-sg",
            "name_prefix": "",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_app_sg",
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_test_lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:security-group/sg-083994ca349a72c4e",
            "description": "Allow Lambda to reach RDS and Secrets Manager",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-083994ca349a72c4e",
            "ingress": [],
            "name": "secrets-rotation-lambda-sg",
            "name_prefix": "",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_test_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:security-group/sg-0da417904fef6bbef",
            "description": "Security group for ECS app servers",
            "egress": [],
            "id": "sg-0da417904fef6bbef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs-test-lb-sg",
            "name_prefix": "",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_test_vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:security-group/sg-0e65c2d4872906729",
            "description": "Allow HTTPS from inside VPC",
            "egress": [],
            "id": "sg-0e65c2d4872906729",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083994ca349a72c4e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "secrets-manager-vpce-sg",
            "name_prefix": "",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ece_test_allow_lambda_rotation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-149878239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0c1d14df2de0ba18a",
            "security_group_rule_id": "sgr-08f00efce80f32a35",
            "self": false,
            "source_security_group_id": "sg-083994ca349a72c4e",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_app_sg",
            "module.aws_vpc.aws_security_group.ecs_test_db_sg",
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_ingress_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1600919300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0e65c2d4872906729",
            "security_group_rule_id": "sgr-018ed4e3b13719f32",
            "self": false,
            "source_security_group_id": "sg-00e9de63d787cc86e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_app_sg",
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_security_group.ecs_test_lb_sg",
            "module.aws_vpc.aws_security_group.ecs_test_vpc_endpoint_sg",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_test_private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-04e0ae38b6a59ea54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e0ae38b6a59ea54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-private-app-subnet-1"
            },
            "tags_all": {
              "Name": "ecs-test-private-app-subnet-1"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-05dacaa3220809d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dacaa3220809d0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-private-app-subnet-2"
            },
            "tags_all": {
              "Name": "ecs-test-private-app-subnet-2"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_test_private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-0c8e4e7b7917e3103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8e4e7b7917e3103",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-private-db-subnet-1"
            },
            "tags_all": {
              "Name": "ecs-test-private-db-subnet-1"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-045dd9b82abb5398c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045dd9b82abb5398c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-private-db-subnet-2"
            },
            "tags_all": {
              "Name": "ecs-test-private-db-subnet-2"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-06ece89a687e52855",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ece89a687e52855",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-public-subnet-1"
            },
            "tags_all": {
              "Name": "ecs-test-public-subnet-1"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:subnet/subnet-08738ac0548eb3ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08738ac0548eb3ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899853618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-test-public-subnet-2"
            },
            "tags_all": {
              "Name": "ecs-test-public-subnet-2"
            },
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:vpc/vpc-0130dcdd5102240fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-050aac06a473d2042",
            "default_route_table_id": "rtb-0d4c6b467edb9d037",
            "default_security_group_id": "sg-039edc9dbcc55e65c",
            "dhcp_options_id": "dopt-02bd0117a95fc552d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0130dcdd5102240fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4c6b467edb9d037",
            "owner_id": "864899853618",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:vpc-endpoint/vpce-04684cf8db8d0ac56",
            "dns_entry": [
              {
                "dns_name": "vpce-04684cf8db8d0ac56-3qf79a1z.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-04684cf8db8d0ac56-3qf79a1z-ap-southeast-1b.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-04684cf8db8d0ac56-3qf79a1z-ap-southeast-1a.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "api.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z047968615PSU25NLZ4YY"
              },
              {
                "dns_name": "ecr.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z088668338I8D38QN1ENC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04684cf8db8d0ac56",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a45aee79d5570d98",
              "eni-0f5df71abe10f7c7d"
            ],
            "owner_id": "864899853618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e65c2d4872906729"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.2.191",
                "subnet_id": "subnet-04e0ae38b6a59ea54"
              },
              {
                "ipv4": "192.168.3.182",
                "subnet_id": "subnet-05dacaa3220809d0b"
              }
            ],
            "subnet_ids": [
              "subnet-04e0ae38b6a59ea54",
              "subnet-05dacaa3220809d0b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_security_group.ecs_test_vpc_endpoint_sg",
            "module.aws_vpc.aws_subnet.ecs_test_private_app_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:vpc-endpoint/vpce-0af04bc0460f73c1b",
            "dns_entry": [
              {
                "dns_name": "vpce-0af04bc0460f73c1b-qtkq324t.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0af04bc0460f73c1b-qtkq324t-ap-southeast-1b.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0af04bc0460f73c1b-qtkq324t-ap-southeast-1a.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z089128538QPRQ8INULD"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z089128538QPRQ8INULD"
              },
              {
                "dns_name": "dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z088632117OU77QTMMCNW"
              },
              {
                "dns_name": "*.dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z088632117OU77QTMMCNW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0af04bc0460f73c1b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b96550d80f4b3be",
              "eni-0a700095d2bcb47a2"
            ],
            "owner_id": "864899853618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e65c2d4872906729"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.2.210",
                "subnet_id": "subnet-04e0ae38b6a59ea54"
              },
              {
                "ipv4": "192.168.3.223",
                "subnet_id": "subnet-05dacaa3220809d0b"
              }
            ],
            "subnet_ids": [
              "subnet-04e0ae38b6a59ea54",
              "subnet-05dacaa3220809d0b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_security_group.ecs_test_vpc_endpoint_sg",
            "module.aws_vpc.aws_subnet.ecs_test_private_app_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:vpc-endpoint/vpce-09b9f733d379d7bc8",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b9f733d379d7bc8",
            "ip_address_type": "ipv4",
            "owner_id": "864899853618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c98300d3a48b0d65"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.ecs_test_private",
            "module.aws_vpc.aws_vpc.ecs_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864899853618:vpc-endpoint/vpce-0e468c931363e1e06",
            "dns_entry": [
              {
                "dns_name": "vpce-0e468c931363e1e06-ayxpaf31.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e468c931363e1e06-ayxpaf31-ap-southeast-1a.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e468c931363e1e06-ayxpaf31-ap-southeast-1b.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "secretsmanager.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03426902SN3PLSVW51JI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e468c931363e1e06",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b2028e2f53e3f1b",
              "eni-0e8a7242c12e766a6"
            ],
            "owner_id": "864899853618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e65c2d4872906729"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.secretsmanager",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.4.51",
                "subnet_id": "subnet-0c8e4e7b7917e3103"
              },
              {
                "ipv4": "192.168.5.28",
                "subnet_id": "subnet-045dd9b82abb5398c"
              }
            ],
            "subnet_ids": [
              "subnet-045dd9b82abb5398c",
              "subnet-0c8e4e7b7917e3103"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0130dcdd5102240fd"
          },
          "dependencies": [
            "module.aws_vpc.aws_security_group.ecs_test_lambda_sg",
            "module.aws_vpc.aws_security_group.ecs_test_vpc_endpoint_sg",
            "module.aws_vpc.aws_subnet.ecs_test_private_db_subnet",
            "module.aws_vpc.aws_vpc.ecs_test_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}